--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,8 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/perciumt.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5, user-scalable=yes" />
     <meta name="theme-color" content="#1e3a8a" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta name="description" content="Purcmium - Premium Affiliate Marketing Platform" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/perciumt.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
