google verification tag

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,6 +9,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta name="description" content="Purcmium - Premium Affiliate Marketing Platform" />
+    <meta name="google-site-verification" content="QFp7o9fCyMfmUNP9Ne9LnpiZHQZ-Q4Jk9hu0SorDZhs" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/perciumt.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     
